feat: create signup and adjust login