@@ -6,7 +6,6 @@ import java.util.stream.Collectors;
 
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.validation.FieldError;
 import jakarta.validation.ConstraintViolation;
 import jakarta.validation.ConstraintViolationException;
 import org.springframework.web.bind.MethodArgumentNotValidException;
@@ -28,39 +27,6 @@ public class RestExceptionHandler {
         return buildError(HttpStatus.BAD_REQUEST, ex.getMessage());
     }
 
-    @ExceptionHandler(SchedulerConflict.class)
-    public ResponseEntity<Map<String, Object>> handleSchedulerConflict(SchedulerConflict ex) {
-        Map<String, Object> body = Map.of(
-            "status", HttpStatus.CONFLICT.value(),
-            "message", ex.publicMessage,
-            "sugestoes", ex.sugestoes.stream().map(s -> Map.of(
-                "inicio", s.inicio,
-                "fim", s.fim,
-                "recurso", Map.of("tipo", s.recursoTipo, "id", s.recursoId),
-                "motivo", s.motivo
-            )).collect(Collectors.toList())
-        );
-        return ResponseEntity.status(HttpStatus.CONFLICT).body(body);
-    }
-
-    @ExceptionHandler(MethodArgumentNotValidException.class)
-    public ResponseEntity<Map<String, Object>> handleValidationExceptions(MethodArgumentNotValidException ex) {
-        List<Map<String, String>> errors = ex.getBindingResult()
-                .getFieldErrors()
-                .stream()
-                .map(error -> Map.of(
-                        "field", error.getField(),
-                        "message", defaultMessage(error)
-                ))
-                .collect(Collectors.toList());
-
-        Map<String, Object> body = Map.of(
-                "status", HttpStatus.BAD_REQUEST.value(),
-                "message", "Erro de validação",
-                "validationErrors", errors
-        );
-        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(body);
-    }
 
     @ExceptionHandler(ConstraintViolationException.class)
     public ResponseEntity<Map<String, Object>> handleConstraintViolation(ConstraintViolationException ex) {
@@ -68,7 +34,7 @@ public class RestExceptionHandler {
             .map(v -> Map.of(
                 "field", extractParamName(v),
                 "message", v.getMessage()
-            )).collect(Collectors.toList());
+            )).toList();
 
         Map<String, Object> body = Map.of(
             "status", HttpStatus.INTERNAL_SERVER_ERROR.value(),
@@ -100,11 +66,6 @@ public class RestExceptionHandler {
         return buildError(HttpStatus.CONFLICT, ex.getMessage());
     }
 
-    @ExceptionHandler(java.util.NoSuchElementException.class)
-    public ResponseEntity<Map<String, Object>> handleNoSuchElementException(java.util.NoSuchElementException ex) {
-        return buildError(HttpStatus.NOT_FOUND, ex.getMessage());
-    }
-
     private Map<String, Object> errorBody(HttpStatus status, String message) {
         return Map.of(
             "status", status.value(),
@@ -114,10 +75,6 @@ public class RestExceptionHandler {
 
     private ResponseEntity<Map<String, Object>> buildError(HttpStatus status, String message) {
         return ResponseEntity.status(status).body(errorBody(status, message));
-    }
-
-    private String defaultMessage(FieldError error) {
-        return error.getDefaultMessage() != null ? error.getDefaultMessage() : (error.getField() + " inválido");
     }
 
     @ExceptionHandler(SchedulerConflict.class)
@@ -140,11 +97,14 @@ public class RestExceptionHandler {
         List<Map<String, String>> errors = ex.getBindingResult()
                 .getFieldErrors()
                 .stream()
-                .map(error -> Map.of(
-                        "field", error.getField(),
-                        "message", error.getDefaultMessage()
-                ))
-                .collect(Collectors.toList());
+                .map(error -> {
+                    assert error.getDefaultMessage() != null;
+                    return Map.of(
+                            "field", error.getField(),
+                            "message", error.getDefaultMessage()
+                    );
+                })
+                .toList();
         
         Map<String, Object> error = Map.of(
                 "code", "ERRO_VALIDACAO",
